FLY-2128 fixed and some of alignments issues fixed

--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -9,8 +9,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 9px 25px 9px 45px;
         background: #f8f9fa;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        color: #000000;
+        padding: 15px 30px;
         .title {
           font-weight: 500;
           font-size: 18px;
