--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -1207,7 +1207,8 @@ and open the template in the editor.
                     right: 10px;
                     color: $primaryColor;
                     transition: all 0.3s ease-in;
-                    z-index: 99;   
+                    // z-index: 99; remove z-index because of onboarding dropdown issue icon overlapping
+                    z-index: 8;   
                     background-image: url('^assets/icons/carrot-up-comp.svg') !important;                
                     background-size: 14px;
                     background-repeat: no-repeat; 
